--- a/client/src/index.css
+++ b/client/src/index.css
@@ -84,32 +84,7 @@ code {
   padding: 11px 15px 11px 0;
 }
 
-/* button {
-  display: block;
-  font-size: 16px;
-  width: calc(100% - 30px);
-  height: 50px;
-  margin: 40px 15px 0;
-  background-color: pink;
-  box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08),
-    inset 0 1px 0 #ffb9f6;
-  border-radius: 4px;
-  color: #fff;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all 100ms ease-in-out;
-  will-change: transform, background-color, box-shadow;
-  border: none;
-}
-
-button:active {
-  background-color: #d782d9;
-  box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08),
-    inset 0 1px 0 #e298d8;
-  transform: scale(0.99);
-} */
-
-.App {
+.book {
   margin-left: 25%;
   margin-top: 5%;
   margin-right: 25%;
